# C_plusplus_summer_course_2023

./: .gitmodules  README.md
week1/Assignment_1_2_1/: Assignment_1_2_1  Assignment_1_2_1.cpp
week1/Assignment_1_2_2/: Assignment_1_2_2  Assignment_1_2_2.cpp
week1/Assignment_1_2_3/: Assignment_1_2_3.cpp
week1/Assignment_1_2_4/: Assignment_1_2_4.cpp
week1/Assignment_1_2_5/: Assignment_1_2_5  Assignment_1_2_5.cpp  Library  Library.cpp  Library.h  main
week1/Assignment_1_3_1/Exercise_1/: main  main.cpp
week1/Assignment_1_3_1/Exercise_10/: main  main.cpp
week1/Assignment_1_3_1/Exercise_2/: main  main.cpp
week1/Assignment_1_3_1/Exercise_3/: main  main.cpp
week1/Assignment_1_3_1/Exercise_4/: main  main.cpp
week1/Assignment_1_3_1/Exercise_5/: main  main.cpp
week1/Assignment_1_3_1/Exercise_6/: main  main.cpp
week1/Assignment_2_1_3/: main  main.cpp  peer_review  peer_review.cpp  peer_review.hpp
week10/Assignment_10.1.1/: CMakeLists.txt  README.md  main.cpp
week10/Assignment_10.1.2/: CMakeLists.txt  README.md  main.cpp
week10/Assignment_10.3.1/: CMakeLists.txt  README.md  main.cpp
week10/Assignment_10.3.1/include/: static_allocator.h
week10/Assignment_10.3.1/tests/: unit_tests.cpp  unit_tests_results
week10/Assignment_10.4.1/: README.md
week2/Assignment_2_3_2/: CMakeLists.txt  main.cpp
week2/Assignment_2_4_2/: CMakeLists.txt  main.cpp
week2/Assignment_2_4_2/data/: devices.csv  registers.csv
week2/Assignment_2_4_2/include/: data_generator.h  device.h  file_handler.h  modbus_simulator.h  random_number_generator.h  user_input.h
week2/Assignment_2_4_2/src/: CMakeLists.txt  data_generator.cpp  device.cpp  file_handler.cpp  modbus_simulator.cpp  random_number_generator.cpp  user_input.cpp
week3/Assignment_3_1_2/: CMakeLists.txt  main.cpp
week3/Assignment_3_2_1/: CMakeLists.txt  main.cpp
week3/Assignment_3_2_2/: CMakeLists.txt  main.cpp
week3/Assignment_3_2_2/include/: ai_functions.h  game_functions.h
week3/Assignment_3_2_2/src/: CMakeLists.txt  ai_functions.cpp  board.cpp  game_functions.cpp
week3/Assignment_3_3_1/: CMakeLists.txt  main.cpp
week3/Assignment_3_3_2/Exercise_1/: CMakeLists.txt  main.cpp
week3/Assignment_3_3_2/Exercise_1/include/: basic_math_functions.h
week3/Assignment_3_3_2/Exercise_1/src/: CMakeLists.txt  basic_math_functions.cpp
week3/Assignment_3_3_2/Exercise_1/tests/: CMakeLists.txt  basic_math_unit_test.cpp  unit_tests_cmake
week3/Assignment_3_3_2/Exercise_3/: CMakeLists.txt  README.md  main.cpp
week3/Assignment_3_3_2/Exercise_3/data/: account_data.txt
week3/Assignment_3_3_2/Exercise_3/include/: account_functions.h  banking_functions.h
week3/Assignment_3_3_2/Exercise_3/src/: CMakeLists.txt  account_functions.cpp  database.cpp
week3/Assignment_3_3_2/Exercise_3/tests/: CMakeLists.txt  bank_unit_tests.cpp  bank_unit_tests_results
week3/FinanceManagementSystem/: CMakeLists.txt  README.md  main.cpp
week6/Assignment_6.1.2/: main.cpp
week6/Assignment_6.2.1/: README.md  main.cpp
week6/Assignment_6.2.2/: README.md  main.cpp
week6/Assignment_6.2.3/: README.md  main.cpp
week6/Assignment_6.3.1/: CMakeLists.txt  README.md  main.cpp
week6/Assignment_6.3.1/include/: animal.h  exercise1.h
week6/Assignment_6.3.1/src/: CMakeLists.txt  animal.cpp  exercise1.cpp
week6/Assignment_6.3.2/: README.md
week6/Assignment_6.3.2/Exercise_2_6.2.1/: CMakeLists.txt  main.cpp
week6/Assignment_6.3.2/Exercise_2_6.2.1/include/: positive_integer.h
week6/Assignment_6.3.2/Exercise_2_6.2.1/src/: CMakeLists.txt  positive_integer.cpp
week6/Assignment_6.3.2/Exercise_3_6.1.2/: CMakeLists.txt  README.md  main.cpp
week6/Assignment_6.3.2/Exercise_3_6.1.2/include/: tagged_union.h
week6/Assignment_6.3.2/Exercise_3_6.1.2/src/: CMakeLists.txt  tagged_union.cpp
week6/Assignment_6.4.1/: CMakeLists.txt  README.md  main.cpp
week6/Assignment_6.4.1/src/: CMakeLists.txt  exercise1.cpp  exercise2.cpp  exercise3.cpp
week6/Assignment_6.4.2/: CMakeLists.txt  README.md  main.cpp
week7/Assignment_7.1.1/: CMakeLists.txt  README.md  main.cpp
week7/Assignment_7.1.2/: CMakeLists.txt  README.md  main.cpp
week7/Assignment_7.2.1/: CMakeLists.txt  README.md  main.cpp
week7/Assignment_7.2.1/include/: exercise1.h  exercise2.h  exercise3.h  exercise4.h  exercise5.h
week7/Assignment_7.2.1/src/: CMakeLists.txt  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
week7/Assignment_7.2.2/: CMakeLists.txt  README.md  main.cpp
week7/Assignment_7.3.1/: CMakeLists.txt  README.md  main.cpp
week7/Assignment_7.4.1/: CMakeLists.txt  README.md  main.cpp
week7/Assignment_7.4.2/: CMakeLists.txt  README.md  main.cpp
week8/Assignment_8.1.1/: CMakeLists.txt  README.md  main.cpp
week8/Assignment_8.1.2/: CMakeLists.txt  README.md  main.cpp
week8/Assignment_8.2.1/: CMakeLists.txt  README.md  main.cpp
week8/Assignment_8.2.3/: CMakeLists.txt  README.md  main.cpp
week8/Assignment_8.2.3/include/: grid.h  grid_functions.h
week8/Assignment_8.2.3/src/: CMakeLists.txt  grid_functions.cpp  user_ui.cpp
week8/Assignment_8.2.3/tests/: CMakeLists.txt  grid_tests_results
week8/Assignment_8.3.1/: CMakeLists.txt  README.md  main.cpp
week8/Assignment_8.4.1/: README.md
week8/Assignment_8.4.2/: README.md
week9/Assignment_9.1.1/: CMakeLists.txt  README.md  main.cpp
week9/Assignment_9.1.2/: CMakeLists.txt  README.md  main.cpp
week9/Assignment_9.2.1/: CMakeLists.txt  README.md  main.cpp
week9/Assignment_9.3.1/: CMakeLists.txt  README.md  main.cpp
week9/Assignment_9.3.1/include/: string_adapter.h  unicode_iterator.h
week9/Assignment_9.3.1/src/: CMakeLists.txt  string_adapter.cpp  unicode_iterator.cpp
week9/Assignment_9.3.1/tests/: CMakeLists.txt  unit_tests.cpp  unit_tests_results
week9/Assignment_9.4.1/: README.md
week9/Assignment_9.4.2/: CMakeLists.txt  README.md  main.cpp
week9/Assignment_9.4.2/include/: exercise_1.h  exercise_2.h
week9/Assignment_9.4.2/src/: CMakeLists.txt  exercise_1.cpp  exercise_2.cpp
(+437 files in other folders)
