add_library(modbus_simulator STATIC modbus_simulator.cpp)
add_library(data_generator STATIC data_generator.cpp)
add_library(user_input STATIC user_input.cpp)
add_library(file_handler STATIC file_handler.cpp)
add_library(random_number_generator STATIC random_number_generator.cpp)
add_library(device STATIC device.cpp)

